--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,37 @@ a{
     text-decoration: none;
 }
 
+/* page basic style */
+/* text */
+.text-primary{
+    color: #93cb52;
+}
+
+/* navbar */
+#navbar{
+    background: #333;
+    color: #fff;
+    position: sticky;
+    top: 0;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+#navbar ul{
+    display: flex;
+    list-style: none;
+    align-items: center;
+}
+
+#navbar ul li a{
+    color: #fff;
+    padding: 0.75rem;
+    margin: 0 0.25rem;
+}
+
+#navbar ul li a:hover{
+    background-color: #93cb52;
+    border-radius: 5px;
+}
+
