--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,22 @@ a{
     color: #93cb52;
 }
 
+.btn{
+    display: inline-block;
+    padding: 0.5rem 2rem;
+    border: none;
+    border-radius: 5px;
+}
+
+.btn-primary{
+    background:#93cb52;
+    color: #fff;
+}
+
+.btn-primary:hover{
+    background: #7ab436;
+}
+
 /* navbar */
 #navbar{
     background: #333;
@@ -49,3 +65,31 @@ a{
     border-radius: 5px;
 }
 
+/* showcase */
+#showcase{
+    background: #333 url('../img/showcase.jpg');
+    height: 100vh;
+    color: #fff;
+}
+
+#showcase .showcase-content{
+    display: flex;
+    height: 100%;
+    padding: 0 2rem;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.heading{
+    font-size: 4rem;
+    margin-bottom: 0.75rem;
+    line-height: 1.1;
+}
+
+.par{
+    font-size: 1.1rem;
+    margin-bottom: 2rem;
+}
