--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,11 @@ a {
   color: #333;
 }
 
+.bg-dark{
+    background-color: #333;
+    color: #fff;
+}
+
 /* navbar */
 #navbar {
   background: #333;
@@ -140,4 +145,27 @@ a {
     background: #93cb52;
     border-radius: 50%;
     margin-bottom: 1rem;
+}
+
+/* who */
+#who{
+    display: flex;
+}
+
+#who div{
+    flex: 1;
+}
+
+#who .who-img{
+    background: url(../img/people.jpg) no-repeat center center/cover;
+}
+
+#who ul{
+    list-style: none;
+    margin: 0.5rem 0;
+}
+
+#who ul li{
+    padding: 0.5rem 0;
+    border-bottom: #444 dollted 1px;
 }
