--- a/css/styles.css
+++ b/css/styles.css
@@ -56,9 +56,9 @@ a {
   color: #333;
 }
 
-.bg-dark{
-    background-color: #333;
-    color: #fff;
+.bg-dark {
+  background-color: #333;
+  color: #fff;
 }
 
 /* navbar */
@@ -141,31 +141,43 @@ a {
   flex: 1;
 }
 
-#what .items .item i{
-    background: #93cb52;
-    border-radius: 50%;
-    margin-bottom: 1rem;
+#what .items .item i {
+  background: #93cb52;
+  border-radius: 50%;
+  margin-bottom: 1rem;
 }
 
 /* who */
-#who{
+#who {
+  display: flex;
+}
+
+#who div {
+  flex: 1;
+}
+
+#who .who-img {
+  background: url(../img/people.jpg) no-repeat center center/cover;
+}
+
+#who ul {
+  list-style: none;
+  margin: 0.5rem 0;
+}
+
+#who ul li {
+  padding: 0.5rem 0;
+  border-bottom: #444 dollted 1px;
+}
+
+/* clients */
+#clients .items{
     display: flex;
+    justify-content: center;
 }
 
-#who div{
-    flex: 1;
-}
-
-#who .who-img{
-    background: url(../img/people.jpg) no-repeat center center/cover;
-}
-
-#who ul{
-    list-style: none;
-    margin: 0.5rem 0;
-}
-
-#who ul li{
-    padding: 0.5rem 0;
-    border-bottom: #444 dollted 1px;
+#clients .items img{
+    display: block;
+    width: 60%;
+    margin: auto;
 }
