Muutsin typo real 184 css-is

--- a/css/styles.css
+++ b/css/styles.css
@@ -181,7 +181,7 @@ a {
 
 #who ul li {
   padding: 0.5rem 0;
-  border-bottom: #444 dollted 1px;
+  border-bottom: #444 dotted 1px;
 }
 
 /* clients */
