--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ a {
   padding: 0.5rem 2rem;
   border: none;
   border-radius: 5px;
+  transition: background 0.3s; /* Add transition for hover effect */
 }
 
 .btn-primary {
@@ -101,6 +102,7 @@ a {
 #navbar ul li a:hover {
   background-color: #93cb52;
   border-radius: 5px;
+  transition: background 0.3s; /* Add transition for hover effect */
 }
 
 /* showcase */
